--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.168.0",
     "aos": "^2.3.4",
+    "framer-motion": "^11.5.6",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "three": "^0.168.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
