--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.168.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "framer-motion": "^11.8.0",
     "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "three": "^0.168.0",
+    "three-globe": "^2.31.3"
   },
   "scripts": {
     "start": "react-scripts start",
