--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/three": "^0.168.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.8.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.446.0",
@@ -22,6 +23,7 @@
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.5.3",
     "three": "^0.168.0",
     "three-globe": "^2.31.3"
   },
